# codeReader

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  alembic.ini  audit.md  docker-compose.yml  list_models.py  ptf_authoring_audit.md  redteam_findings.md  stb_without_ptf.md  ux_build_audit.md
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0000_schema_sql.py  0001_users_onboarded.py  0002_beta_allowlist.py  0003_predict_the_fix_type.py  0004_skip_contract.py  0005_reviews.py  0006_review_history.py  0007_streak_event_unique.py  0008_validation_report_relpath.py  0009_user_email.py  0010_email_delivery_ledger.py  0011_email_delivery_payload.py  0012_feature_usage.py
backend/app/: config.py  db.py  main.py
backend/app/admin/: router.py  service.py
backend/app/attempts/: __init__.py  grader_client.py  grading.py  router.py  rubric.py  service.py
backend/app/auth/: deps.py  oauth.py  router.py  service.py  tokens.py
backend/app/core/: __init__.py  accuracy.py  entitlements.py  errors.py  events.py  grader_health.py  idempotency.py  metrics.py  network.py  ratelimit.py  redis.py  security.py  sentry.py  timezones.py  usage.py
backend/app/disputes/: __init__.py  router.py  service.py
backend/app/email/: __init__.py  address.py  deliveries.py  dispatch.py  links.py  messages.py  recap.py  router.py  sender.py  service.py  unsubscribe.py
backend/app/exercises/: __init__.py  service.py
backend/app/jobs/: grading_retry.py  partitions.py  percentiles.py  reminders.py  runner.py  streak_recon.py  trigger.py  weekly_email.py
backend/app/models/: __init__.py  attempts.py  content.py  feedback.py  identity.py  notifications.py  reviews.py  sessions.py  usage.py  user_state.py
backend/app/reviews/: router.py  service.py
backend/app/schemas/: admin.py  attempts.py  disputes.py  reviews.py  session.py  users.py
backend/app/sessions/: __init__.py  router.py  sampler.py  service.py
backend/app/streak/: router.py  service.py
backend/app/users/: router.py  service.py
backend/scripts/: backfill_stb_fixed_code.py  backup_db.sh  reshuffle_trace_choices.py  restore_db.sh  seed_e2e.py  seed_guard.py  seed_summarize_exercises.py
backend/tests/: _ci_guard.py  _db_guard.py  _run_isolation.py  conftest.py  factories_m4.py  test_a1_streak_safety_net.py  test_a2_email_capture.py  test_a3_reminders_recap.py  test_a4_peek_tomorrow.py  test_api_contract_documented.py  test_ci_guard.py  test_d119_session_completion.py  test_d121_error_contract.py  test_d122_session_build_race.py  test_d123_summarize_off.py  test_d124_repair_gate.py  test_d129_viewer_documents.py  test_d138_job_trigger.py  test_deploy_urls.py  test_entitlements.py  test_entitlements_registry.py  test_env_example.py  test_feature_usage.py  test_healthz.py  test_m1_database.py  test_m2_auth.py  test_m3_llm_client.py  test_m3_orchestrator.py  test_m3_pipeline.py  test_m3_publish.py  test_m3_review_cli.py  test_m3_sandbox.py  test_m3_semantic_gates.py  test_m3_static_gate.py  test_m4_attempts.py  test_m4_concept_state.py  test_m4_sessions.py  test_m4_stats.py  test_m4_streaks.py  test_m5_attempts.py  (+29 more)
db/: schema.sql
docs/: 00-product.md  01-content-spec.md  02-architecture-full.md  03-mvp-scope.md  04-database.md  05-api-contract.md  06-implementation-plan.md  07-decisions.md  08-frontend-design.md  08b-frontend-tokens-APPROVED.md  09-fastapi-cloud-deployment.md  10-roadmap-retention.md  11-phone-surface-question.md  ops-incident-report-july-2026.md  ops-runbook.md
frontend/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
pipeline/: __init__.py  config.py  dedup.py  explain.py  generate.py  handauthored_ptf_batch1.json  handauthored_stb_batch1.json  handauthored_stb_batch2.json  handauthored_stb_batch3.json  handauthored_stb_batch4.json  ingest.py  llm_client.py  orchestrator.py  predict_the_fix.py  ptf_ingest.py  publish.py  repair.py  review_cli.py  review_packet.md  sandbox_gate.py  schemas.py  scoring.py  semantic_gates.py  spec_sampler.py  static_gate.py  taxonomy.py
prompts/: README.md  dryrun_stb_validation.py  (+11 more)
(+85 files in other folders)
