[project]
name = 'codereader-backend'
version = '0.1.0'
requires-python = '>=3.12,<3.13'
dependencies = [
    'fastapi>=0.115,<1.0',
    'uvicorn[standard]>=0.34,<1.0',
    'sqlalchemy[asyncio]>=2.0,<3.0',
    'asyncpg>=0.30,<1.0',
    'alembic>=1.14,<2.0',
    'redis>=5.2,<6.0',
    'pydantic-settings>=2.7,<3.0',
    'httpx>=0.28,<1.0',
    'cryptography>=43.0,<46.0',
    'anthropic>=0.40,<1.0',
    'tzdata>=2024.1',
    'pytest>=8.3,<9.0',
    'pytest-asyncio>=0.25,<1.0',
    'ruff>=0.8,<1.0',
]

[tool.setuptools]
packages = ['app']

[tool.pytest.ini_options]
asyncio_mode = 'auto'
pythonpath = ['.']

[tool.ruff]
line-length = 100
target-version = 'py312'

[tool.ruff.lint]
select = ['E', 'F', 'I', 'UP', 'B']
