[project]
name = 'codereader-backend'
version = '0.1.0'
requires-python = '>=3.12,<3.13'
dependencies = [
    # [standard], not bare fastapi: FastAPI Cloud starts the app with the
    # `fastapi` CLI (`fastapi run`), which is packaged as fastapi-cli and only
    # arrives via this extra. On bare fastapi the deploy BUILDS fine and dies at
    # runtime with `RuntimeError: To use the fastapi command, please install
    # "fastapi[standard]"`. See D-113.
    'fastapi[standard]>=0.115,<1.0',
    # Kept explicit even though fastapi[standard] pulls it in: docker-compose and
    # the local dev stack invoke uvicorn directly, so it is a first-class
    # dependency here, not an incidental one.
    'uvicorn[standard]>=0.34,<1.0',
    'sqlalchemy[asyncio]>=2.0,<3.0',
    'asyncpg>=0.30,<1.0',
    'alembic>=1.14,<2.0',
    'redis>=5.2,<6.0',
    'pydantic-settings>=2.7,<3.0',
    'httpx>=0.28,<1.0',
    # Floor raised past the 7 advisories in <=45.x (PYSEC-2026-35/36/2141,
    # GHSA-537c-gmf6-5ccf), all fixed by 48.0.1; the old <46.0 ceiling was
    # itself blocking the fix (D-149). Only use is the stable AESGCM primitive
    # (core/security.py), unchanged across these versions.
    'cryptography>=48.0.1,<49.0',
    'anthropic>=0.40,<1.0',
    'openai>=1.50,<2.0',
    'sentry-sdk[fastapi]>=2.0,<3.0',
    'tzdata>=2024.1',
    # pytest floor raised past PYSEC-2026-1845 (fixed in 9.0.3); the old <9.0
    # ceiling blocked it, and pytest 9 needs pytest-asyncio >=1.0, so both move
    # together (D-151). Full suite green on the pair; asyncio_mode='auto' below
    # is unchanged.
    'pytest>=9.0.3,<10.0',
    'pytest-asyncio>=1.0,<2.0',
    'ruff>=0.8,<1.0',
]

[tool.setuptools]
packages = ['app']
py-modules = ['main']

[tool.pytest.ini_options]
asyncio_mode = 'auto'
pythonpath = ['.']

[tool.ruff]
line-length = 100
target-version = 'py312'

[tool.fastapi]
entrypoint = "app.main:app"

[tool.ruff.lint]
select = ['E', 'F', 'I', 'UP', 'B']
